--- a/DF2D9D96D.opf/index.yml
+++ b/DF2D9D96D.opf/index.yml
@@ -4,8 +4,8 @@ revision: '00001'
 annotations:
   68fb2c1d7ea7451f9e03de1fac7a075e:
     parts: {}
+    work_id: D4388
     span:
-    - vol: 116
+    - base: bbbd
       start: 1
       end: 3725
-    work_id: D4388
